@@ -2,7 +2,7 @@
  % rowl - generation 1
  % Copyright (C) 2010 nineties
  %
- % $Id: tcodegen.rl 2010-03-27 22:35:35 nineties $
+ % $Id: tcodegen.rl 2010-03-27 23:16:24 nineties $
  %);
 
 (% translate typed rowlcore to Three-address Code %);
@@ -574,8 +574,11 @@ transl_fundecl: (p0) {
 
     x6 = mktup5(TCODE_FUNC, x0, x1[2], x6, FALSE);
 
-    (% liveness analysis %);
-    liveness(x6);
+    (% deadcode elimination %);
+    puts("> deadcode elimination (");
+    puts(get_ident_name(p0[2]));
+    puts(") ...\n");
+    eliminate_deadcode(x6);
 
     (% allocate registers %);
     puts("> allocating registers (");
